@@ -640,6 +640,24 @@ Verify a file is not empty:
 &lt;length file=&quot;foo&quot; when=&quot;greater&quot; length=&quot;0&quot;/&gt;
 </pre>
 
+<h4>isfailure</h4>
+
+<p>Test the return code of an executable (see
+<a href="exec.html">&lt;exec&gt;</a>) for failure. <b>Since Ant 1.7</b></p>
+
+<table border="1" cellpadding="2" cellspacing="0">
+  <tr>
+    <td valign="top"><b>Attribute</b></td>
+    <td valign="top"><b>Description</b></td>
+    <td align="center" valign="top"><b>Required</b></td>
+  </tr>
+  <tr>
+    <td valign="top">code</td>
+    <td valign="top">The return code to test.</td>
+    <td valign="top" align="center">Yes</td>
+  </tr>
+</table>
+
 <hr>
 <p align="center">Copyright &copy; 2001-2005 Apache Software
 Foundation. All rights Reserved.</p>
