@@ -1,0 +1,48 @@
+<project default="testisfailure">
+
+  <target name="testisfailure">
+    <fail>
+      <condition>
+        <or>
+          <and>
+            <os family="openvms" />
+            <or>
+              <isfailure code="1" />
+              <isfailure code="3" />
+              <isfailure code="5" />
+              <isfailure code="7" />
+              <isfailure code="9" />
+              <not>
+                <and>
+                  <isfailure code="0" />
+                  <isfailure code="2" />
+                  <isfailure code="4" />
+                  <isfailure code="6" />
+                  <isfailure code="8" />
+                </and>
+              </not>
+            </or>
+          </and>
+          <and>
+            <not>
+              <os family="openvms" />
+            </not>
+            <or>
+              <isfailure code="0" />
+              <not>
+                <and>
+                  <isfailure code="1" />
+                  <isfailure code="10" />
+                  <isfailure code="50" />
+                  <isfailure code="100" />
+                  <isfailure code="255" />
+                </and>
+              </not>
+            </or>
+          </and>
+        </or>
+      </condition>
+    </fail>
+  </target>
+
+</project>
