@@ -44,3 +44,4 @@ scriptcondition=org.apache.tools.ant.types.optional.ScriptCondition
 xor=org.apache.tools.ant.taskdefs.condition.Xor
 parsersupports=org.apache.tools.ant.taskdefs.condition.ParserSupports
 scriptmapper=org.apache.tools.ant.types.optional.ScriptMapper
+isfailure=org.apache.tools.ant.taskdefs.condition.IsFailure
